Fiz várias modificações

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
 <div class="footer-info">
-    <span class="footer-copy">&copy; Desenhando com Mack &ndash; 2018</span>
 
     <ul class="footer-pages">
         <li><a href="/">HOME</a></li>
@@ -8,11 +7,13 @@
     </ul>
     <div class="social">
         <div class="social-email"><a href="mailto:{{ site.contact.email }}">{{ site.contact.email }}</a></div>
-        <ul class="social-list">
+        <!-- <ul class="social-list">
             <li><a href="//{{ site.contact.youtube }}" target="_blank"><i class="fa-2x fab fa-youtube"></i></a></li>
             <li><a href="//{{ site.contact.facebook }}" target="_blank"><i class="fa-2x fab fa-facebook"></i></a></li>
             <li><a href="//{{ site.contact.instagram }}" target="_blank"><i class="fa-2x fab fa-instagram"></i></a></li>
             <li><a href="//{{ site.contact.twitter }}" target="_blank"><i class="fa-2x fab fa-twitter"></i></a></li>
-        </ul>
+        </ul> -->
     </div>
+    <span class="footer-copy">&copy; Desenhando com Mack &ndash; 2018</span>
+
 </div>
