--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -16,8 +16,8 @@
     font-size: 2.25rem;
     text-align: center;
     margin: 4rem 0 3rem;
-    border-bottom: solid 2px #C4C4C4;
-    padding: 0 2.5rem 1rem;
+    border-bottom: solid 5px #FF587B;
+    padding: 0 0 1rem;
 }
 
 .page-description {
