--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,2 +1,4 @@
+<div class="{{ page.bgcolor }}">
 <h1 class="page-title">{{ page.page_title }}</h1>
 <h2 class="page-description">{{ page.page_description }}</h2>
+</div>
