--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/hamburgers.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 
 
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
@@ -26,13 +26,14 @@
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
+      console.log(fjs);
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
       js.src = 'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v3.0&appId=192466878110093&autoLogAppEvents=1';
-      fjs.parentode.insertBefore(js, fjs);
+      fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
 
-    <header class="header {{ page.bgcolor }}">
+    <header class="header">
       {% include topbar.html %}
 
       {% if page.has_header %}{% include header.html %}{% endif %}
