--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -17,22 +17,27 @@
 }
 
 .post-info {
-    @include clearfix;
+    font-size: 80%;
     margin-top: 2rem;
     margin-bottom: 2rem;
-    position: relative;
+
+
+    @media screen and (min-width: 500px) {
+        display: flex;
+        justify-content: space-between;
+        align-content: center;
+    }
+}
+
+.post-meta {
+    @include clearfix;
 }
 
 .post-share {
-    clear: both;
-    iframe {
-      vertical-align: middle;
-    }
+    align-self: center;
 
-    @media screen and (min-width: 500px) {
-        position: absolute;
-        right: 0;
-        top: 0;
+    iframe {
+      vertical-align: bottom;
     }
 }
 
@@ -45,9 +50,13 @@
 .post-author-avatar {
     float: left;
     border-radius: 50%;
-    margin-right: 1rem;
+    margin-right: 1rem !important;
 }
 
-.post-body {
+.post-author-name {
+    white-space: nowrap;
+}
 
+.post-date {
+    white-space: nowrap;
 }
