--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -45,6 +45,7 @@
     font-family: "Roboto Condensed";
     font-weight: lighter;
     font-size: 2.125rem;
+    margin-bottom: 0;
 }
 
 .post-author-avatar {
