--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,5 +1,5 @@
 <div class="topbar">
-    <img class="topbar-logo" src="/assets/img/logo.png" alt="Logo do site" height="50">
+    <img class="topbar-logo" src="/assets/img/logo.jpg" alt="Logo do site" height="50">
 
     <div class="topbar-menu">
         <button class="hamburger hamburger--slider" type="button" aria-label="Menu" aria-controls="navigation"><span class="hamburger-box"><span class="hamburger-inner"></span></span></button>
