--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -83,6 +83,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 5px 5px 0 0;
   @media screen and (min-width: 360px) {
     height: 160px;
   }
