--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,6 @@
+---
+layout: compress
+---
 <!doctype html>
 <html lang="{{ page.lang | default: site.lang | default: 'pt-br' }}">
   <head>
@@ -12,7 +15,6 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="{{ '/assets/css/hamburgers.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
@@ -22,7 +24,6 @@
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
-      console.log(fjs);
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
       js.src = 'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v3.0&appId=192466878110093&autoLogAppEvents=1';
