--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -6,11 +6,11 @@
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
 var disqus_config = function () {
-    this.page.url = "{{ page.url | absolute_url }}";  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    this.page.url = "{{ page.url | absolute_url }}";
+    this.page.identifier = this.page.url;
 };
 
-(function() { // DON'T EDIT BELOW THIS LINE
+(function() {
     var d = document, s = d.createElement('script');
     s.src = 'https://desenhandocommack.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
