Adiciona estilos para imagens com a classe banner

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -5,7 +5,7 @@
     max-width: 50rem;
     margin: auto;
 
-    img {
+    .banner {
         max-width: 100%;
         display: block;
         margin: auto;
