--- a/themes/custom/layouts/_partials/sidebar.html
+++ b/themes/custom/layouts/_partials/sidebar.html
@@ -1,1 +1,21 @@
-<div class="sidebar">Sidebar</div>
+<!-- Sidebar (mesma do blog.html) -->
+<aside class="blog-sidebar">
+  <div class="blog-widget">
+    <h3>Destaques</h3>
+    <ul>
+      <li>
+        <img src="/images/produto1.png" alt="Produto 1" class="highlight-img" /><a href="#">Aprenda a usar o Krita</a>
+      </li>
+      <li>
+        <img src="/images/produto2.png" alt="Produto 2" class="highlight-img" /><a href="#">
+          Sobre desenhos e softwares
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="blog-widget">
+    <h3>Anúncio</h3>
+    <img src="/images/anuncio.jpg" alt="Anúncio" />
+  </div>
+</aside>
