--- a/themes/custom/layouts/baseof.html
+++ b/themes/custom/layouts/baseof.html
@@ -6,31 +6,35 @@
 
     <title>Desenhando com Mack</title>
 
-    <meta
-      name="description"
-      content="Desenho para iniciantes que querem se inspirar e melhorar suas habilidades."
-    />
+    <meta name="description" content="Desenho para iniciantes que querem se inspirar e melhorar suas habilidades." />
 
     {{ with resources.Get "styles/style.css" | resources.Fingerprint }}
-    <link
-      rel="stylesheet"
-      href="{{ .RelPermalink }}"
-      integrity="{{ .Data.Integrity }}"
-    />
+    <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" />
     {{ end }}
+
+    <!--  -->
+
+    {{ block "styles" . }}{{ end }}
 
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet" />
+
+    <link rel="icon" type="image/x-icon" href="/images/favicon-16x16.ico" />
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="/images/favicon-16x16.ico" />
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="/images/favicon-32x32.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
   </head>
 
   <body>
+    {{ partial "navbar.html" . }}
+
+    <!--  -->
+
     {{ block "main" . }}{{ end }}
   </body>
 </html>
