--- a/themes/custom/layouts/_partials/sidebar.html
+++ b/themes/custom/layouts/_partials/sidebar.html
@@ -2,12 +2,21 @@
 <aside class="blog-sidebar">
   <div class="blog-widget">
     <h3>Destaques</h3>
+    <div class="blog-widget">
+      <h3>Anúncio</h3>
+      <img src="/images/anuncio.jpg" alt="Anúncio" />
+    </div>
+
     <ul>
       <li>
-        <img src="/images/produto1.png" alt="Produto 1" class="highlight-img" /><a href="#">Aprenda a usar o Krita</a>
+        <a href="https://go.hotmart.com/I98301009X?dp=1" class="highlight-link-sidebar">
+          <img src="/images/sidebar/sidebar-cursokrita.png" alt="Produto 1" class="highlight-img" />Aprenda a usar o
+          Krita</a
+        >
       </li>
       <li>
-        <img src="/images/produto2.png" alt="Produto 2" class="highlight-img" /><a href="#">
+        <a href="https://www.youtube.com/c/DesenhandocomMack" class="highlight-link-sidebar">
+          <img src="/images/sidebar/sidebar-youtube.png" alt="Produto 2" class="highlight-img" />
           Sobre desenhos e softwares
         </a>
       </li>
