--- a/themes/custom/layouts/home.html
+++ b/themes/custom/layouts/home.html
@@ -21,7 +21,7 @@
 
           <!-- Container do botão + info -->
           <div class="btn-wrapper">
-            <a href="https://go.hotmart.com/I98301009X" target="_blank" class="slides-btn">
+            <a href="https://go.hotmart.com/I98301009X?dp=1" target="_blank" class="slides-btn">
               <span class="material-symbols-rounded">shopping_cart</span>
               COMPRAR 39,90
             </a>
@@ -88,32 +88,6 @@
     </div>
   </section>
 </main>
-
-<!-- RODAPÉ DO SITE TODO -->
-
-<footer class="main-footer">
-  <div class="container-footer">
-    <!-- nome do site e direitos autoriais -->
-
-    <p class="footer-text">&copy; {{ now.Year }} Desenhando com Mack. Todos os direitos reservados.</p>
-
-    <!-- ícones de redes sociais -->
-    <!-- aria-label é um atributo de acessibilidade que descreve o elemento para leitores de tela ou tecnologias assistivas, sem alterar a aparência visual. -->
-    <div class="footer-icons">
-      <a href="https://www.youtube.com/c/DesenhandocomMack" target="_blank" aria-label="YouTube">
-        <img src="/images/youtube-icon.png" alt="Ícone Rosa YouTube" />
-      </a>
-
-      <a href="https://www.behance.net/mackilustra" target="_blank" aria-label="Behance">
-        <img src="/images/behance-icon.png" alt="Ícone Rosa Behance" />
-      </a>
-
-      <a href="https://www.linkedin.com/in/mackilustra/" target="_blank" aria-label="Linkedin">
-        <img src="/images/linkedin-icon.png" alt="Ícone Rosa Linkedin" />
-      </a>
-    </div>
-  </div>
-</footer>
 
 <script>
   // MUDAR TEMA
